remove code smell toList CorrelationReportController